--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Curso de Clean Architecture",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "tsc",
+    "test": "jest ./dist"
   },
   "author": "",
   "license": "ISC",
